@startuml
hide circle

package "Storage" as S{
    interface Storage <<interface>>

package "AddressBookStorage" as ABS{
    interface AddressBookStorage <<interface>>
    class JsonAddressBookStorage

    class JsonSerializableAddressBook
    class JsonAdaptedPerson
    class JsonAdaptedTeam
}
    class StorageManager
package "UserPrefsStorage" as UPS {
    interface UserPrefsStorage <<interface>>
    class JsonUserPrefsStorage
}
    ' ===== Relationships =====

    AddressBookStorage <- StorageManager : 1
    StorageManager -> UserPrefsStorage : 1

    Storage <|.. StorageManager
    Storage --|> AddressBookStorage
    Storage --|> UserPrefsStorage
    AddressBookStorage <|.. JsonAddressBookStorage
    UserPrefsStorage <|.. JsonUserPrefsStorage

    JsonAddressBookStorage ..> JsonSerializableAddressBook
    JsonSerializableAddressBook --> JsonAdaptedPerson
    JsonSerializableAddressBook --> JsonAdaptedTeam
}
@enduml
